force-app/main/default/objects/DESKSCMT__Desk_Article_Migration__c/fields/DESKSCMT__Body__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>