force-app/main/default/objects/DESKSCMT__Desk_Article_Migration__c/fields/DESKSCMT__Desk_Language__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Language__c</fullName>
    <label>Desk Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>