force-app/main/default/objects/DESKSCMT__Desk_Article_Migration__c/fields/DESKSCMT__Desk_Topic__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Topic__c</fullName>
    <label>Desk Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>