force-app/main/default/objects/DESKSCMT__Desk_Article_Migration__c/fields/DESKSCMT__IsVisibleInPkb__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__IsVisibleInPkb__c</fullName>
    <defaultValue>false</defaultValue>
    <description>null</description>
    <label>In Support Center</label>
    <type>Checkbox</type>
</CustomField>