force-app/main/default/objects/DESKSCMT__Desk_Article_Migration__c/fields/DESKSCMT__Summary__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Summary__c</fullName>
    <label>Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>