force-app/main/default/objects/DESKSCMT__Desk_Article_Migration__c/fields/DESKSCMT__URL__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>