force-app/main/default/objects/DESKSCMT__Desk_Article_Migration__c/listViews/DESKSCMT__Failed_Articles.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Failed_Articles</fullName>
    <columns>NAME</columns>
    <columns>DESKSCMT__Error__c</columns>
    <columns>DESKSCMT__Desk_Article_Id__c</columns>
    <columns>DESKSCMT__URL__c</columns>
    <columns>DESKSCMT__Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Failed Articles</label>
</ListView>